--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -1,7 +1,7 @@
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Clients";
 }
 
-<h2>Index</h2>
+<h2>Our client List</h2>
 
 <p>Hello from our View Template!</p>
