--- a/Views/ServiceTicket/Index.cshtml
+++ b/Views/ServiceTicket/Index.cshtml
@@ -34,32 +34,40 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CarId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MechanicId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ServiceStatusId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ServiceTypeId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PriceTotal)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CaseDescription)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.CarId.ToString(), "Details", "Car", new { id = item.CarId }, null)
+                </td>
+                <td>
+                    @Html.ActionLink(item.MechanicId.ToString(), "Details", "Mechanic", new { id = item.MechanicId }, null)
+                </td>
+                <td>
+                    @Html.ActionLink(item.ServiceStatusId.ToString(), "Details", "ServiceStatus", new
+                        {
+                            id =
+                             item.ServiceStatusId
+                        }, null)
+                </td>
+                <td>
+                    @Html.ActionLink(item.ServiceTypeId.ToString(), "Details", "ServiceType", new
+                        {
+                            id = item.ServiceTypeId
+                        }, null)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PriceTotal)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CaseDescription)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
