--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Mechanic" asp-action="Index">Mechanic</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ServiceType" asp-action="Index">ServiceType</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ServiceStatus" asp-action="Index">ServiceStatus</a>
+                <a class="navbar-brand" asp-area="" asp-controller="RefueledCar" asp-action="Index">RefueledCar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
