--- a/Views/ChargedCar/Create.cshtml
+++ b/Views/ChargedCar/Create.cshtml
@@ -27,11 +27,11 @@
                 <input asp-for="dateTime" class="form-control" />
                 <span asp-validation-for="dateTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PriceTotal" class="control-label"></label>
-                <input asp-for="PriceTotal" class="form-control" />
-                <span asp-validation-for="PriceTotal" class="text-danger"></span>
-            </div>
+            @* <div class="form-group">
+            <label asp-for="PriceTotal" class="control-label"></label>
+            <input asp-for="PriceTotal" class="form-control" />
+            <span asp-validation-for="PriceTotal" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -44,5 +44,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
