--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                 <a class="navbar-brand" asp-area="" asp-controller="ServiceStatus" asp-action="Index">ServiceStatus</a>
                 <a class="navbar-brand" asp-area="" asp-controller="RefueledCar" asp-action="Index">RefueledCar</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ChargedCar" asp-action="Index">ChargedCar</a>
+                <a class="navbar-brand" asp-area="" asp-controller="CalculatedRepairCost"
+                    asp-action="Index">CalculatedRepairCost</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
