--- a/Views/CalculatedRepairCost/Create.cshtml
+++ b/Views/CalculatedRepairCost/Create.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="ServiceTicketId" class="control-label"></label>
+                <input asp-for="ServiceTicketId" class="form-control" />
+                <span asp-validation-for="ServiceTicketId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CarPartId" class="control-label"></label>
                 <input asp-for="CarPartId" class="form-control" />
                 <span asp-validation-for="CarPartId" class="text-danger"></span>
@@ -22,10 +27,15 @@
                 <input asp-for="CarPartQuantity" class="form-control" />
                 <span asp-validation-for="CarPartQuantity" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="HoursDedicated" class="control-label"></label>
+                <input asp-for="HoursDedicated" class="form-control" />
+                <span asp-validation-for="HoursDedicated" class="text-danger"></span>
+            </div>
             @* <div class="form-group">
-            <label asp-for="PriceTotal" class="control-label"></label>
-            <input asp-for="PriceTotal" class="form-control" />
-            <span asp-validation-for="PriceTotal" class="text-danger"></span>
+                <label asp-for="PriceTotal" class="control-label"></label>
+                <input asp-for="PriceTotal" class="form-control" />
+                <span asp-validation-for="PriceTotal" class="text-danger"></span>
             </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
