--- a/Views/CalculatedRepairCost/Edit.cshtml
+++ b/Views/CalculatedRepairCost/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
-                <label asp-for="ServiceTicketId" class="control-label"></label>
-                <input asp-for="ServiceTicketId" class="form-control" />
-                <span asp-validation-for="ServiceTicketId" class="text-danger"></span>
+                <label asp-for="Mechanicid" class="control-label"></label>
+                <input asp-for="Mechanicid" class="form-control" />
+                <span asp-validation-for="Mechanicid" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CarPartId" class="control-label"></label>
