--- a/Views/CalculatedRepairCost/Create.cshtml
+++ b/Views/CalculatedRepairCost/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ServiceTicketId" class="control-label"></label>
-                <input asp-for="ServiceTicketId" class="form-control" />
-                <span asp-validation-for="ServiceTicketId" class="text-danger"></span>
+                <label asp-for="Mechanicid" class="control-label"></label>
+                <input asp-for="Mechanicid" class="form-control" />
+                <span asp-validation-for="Mechanicid" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CarPartId" class="control-label"></label>
@@ -32,11 +32,11 @@
                 <input asp-for="HoursDedicated" class="form-control" />
                 <span asp-validation-for="HoursDedicated" class="text-danger"></span>
             </div>
-            @* <div class="form-group">
+            <div class="form-group">
                 <label asp-for="PriceTotal" class="control-label"></label>
                 <input asp-for="PriceTotal" class="form-control" />
                 <span asp-validation-for="PriceTotal" class="text-danger"></span>
-            </div> *@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -49,7 +49,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
