--- a/Views/CalculatedRepairCost/Create.cshtml
+++ b/Views/CalculatedRepairCost/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Mechanicid" class="control-label"></label>
-                <input asp-for="Mechanicid" class="form-control" />
-                <span asp-validation-for="Mechanicid" class="text-danger"></span>
+                <label asp-for="MechanicId" class="control-label"></label>
+                <input asp-for="MechanicId" class="form-control" />
+                <span asp-validation-for="MechanicId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CarPartId" class="control-label"></label>
