--- a/Views/CalculatedRepairCost/Details.cshtml
+++ b/Views/CalculatedRepairCost/Details.cshtml
@@ -10,34 +10,34 @@
     <h4>CalculatedRepairCost</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Mechanicid)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MechanicId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Mechanicid)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MechanicId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarPartId)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CarPartId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarPartQuantity)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CarPartQuantity)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.HoursDedicated)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.HoursDedicated)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PriceTotal)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PriceTotal)
         </dd>
     </dl>
