--- a/Views/OrderStatus/Create.cshtml
+++ b/Views/OrderStatus/Create.cshtml
@@ -20,9 +20,19 @@
                 <span asp-validation-for="OrderStatusName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CarPartId" class="control-label"></label>
+                <input asp-for="CarPartId" class="form-control" />
+                <span asp-validation-for="CarPartId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="QuantityOrdered" class="control-label"></label>
                 <input asp-for="QuantityOrdered" class="form-control" />
                 <span asp-validation-for="QuantityOrdered" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PriceTotal" class="control-label"></label>
+                <input asp-for="PriceTotal" class="form-control" />
+                <span asp-validation-for="PriceTotal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
