--- a/Views/OrderStatus/Details.cshtml
+++ b/Views/OrderStatus/Details.cshtml
@@ -17,10 +17,22 @@
             @Html.DisplayFor(model => model.OrderStatusName)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CarPartId)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CarPartId)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.QuantityOrdered)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.QuantityOrdered)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PriceTotal)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PriceTotal)
         </dd>
     </dl>
 </div>
