--- a/Views/OrderStatus/Edit.cshtml
+++ b/Views/OrderStatus/Edit.cshtml
@@ -1,5 +1,4 @@
 @model Workshop.Models.OrderStatus
-@using Workshop.Models.Enums
 
 @{
     ViewData["Title"] = "Edit";
@@ -16,14 +15,23 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="OrderStatusName" class="control-label"></label>
-                <select asp-for="OrderStatusName" class="form-control"
-                    asp-items="Html.GetEnumSelectList<OrderStatusEnum>()"></select>
+                <select asp-for="OrderStatusName" class="form-control"></select>
                 <span asp-validation-for="OrderStatusName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CarPartId" class="control-label"></label>
+                <input asp-for="CarPartId" class="form-control" />
+                <span asp-validation-for="CarPartId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="QuantityOrdered" class="control-label"></label>
                 <input asp-for="QuantityOrdered" class="form-control" />
                 <span asp-validation-for="QuantityOrdered" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PriceTotal" class="control-label"></label>
+                <input asp-for="PriceTotal" class="form-control" />
+                <span asp-validation-for="PriceTotal" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -37,7 +45,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
