--- a/Views/OrderStatus/Create.cshtml
+++ b/Views/OrderStatus/Create.cshtml
@@ -29,11 +29,11 @@
                 <input asp-for="QuantityOrdered" class="form-control" />
                 <span asp-validation-for="QuantityOrdered" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PriceTotal" class="control-label"></label>
-                <input asp-for="PriceTotal" class="form-control" />
-                <span asp-validation-for="PriceTotal" class="text-danger"></span>
-            </div>
+            @* <div class="form-group">
+            <label asp-for="PriceTotal" class="control-label"></label>
+            <input asp-for="PriceTotal" class="form-control" />
+            <span asp-validation-for="PriceTotal" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
