--- a/Views/CarPart/Details.cshtml
+++ b/Views/CarPart/Details.cshtml
@@ -10,35 +10,40 @@
     <h4>CarPart</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarPartName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CarPartName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CarId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.CarId) *@
+            @Html.ActionLink(@Model.CarId.ToString(), "Details", "Car", new { id = Model.CarId }, null)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.QuantityAvailable)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.QuantityAvailable)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PricePerUnit)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PricePerUnit)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OrderStatusId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderStatusId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.OrderStatusId) *@
+            @Html.ActionLink(@Model.OrderStatusId.ToString(), "Details", "OrderStatus", new
+                {
+                    id = Model.OrderStatusId
+                }, null)
         </dd>
     </dl>
 </div>
