--- a/Views/CalculatedRepairCost/Details.cshtml
+++ b/Views/CalculatedRepairCost/Details.cshtml
@@ -14,13 +14,15 @@
             @Html.DisplayNameFor(model => model.MechanicId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MechanicId)
+            @* @Html.DisplayFor(model => model.MechanicId) *@
+            @Html.ActionLink(@Model.MechanicId.ToString(), "Details", "Mechanic", new { id = Model.MechanicId }, null)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarPartId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CarPartId)
+            @* @Html.DisplayFor(model => model.CarPartId) *@
+            @Html.ActionLink(@Model.CarPartId.ToString(), "Details", "CarPart", new { id = Model.CarPartId }, null)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarPartQuantity)
