--- a/Views/ClientCar/Details.cshtml
+++ b/Views/ClientCar/Details.cshtml
@@ -10,17 +10,19 @@
     <h4>ClientCar</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ClientId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ClientId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.ClientId) *@
+            @Html.ActionLink(@Model.ClientId.ToString(), "Details", "Client", new { id = Model.ClientId }, null)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CarId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.CarId) *@
+            @Html.ActionLink(@Model.CarId.ToString(), "Details", "Car", new { id = Model.CarId }, null)
         </dd>
     </dl>
 </div>
