--- a/Views/OrderStatus/Index.cshtml
+++ b/Views/OrderStatus/Index.cshtml
@@ -28,26 +28,28 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderStatusName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CarPartId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuantityOrdered)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PriceTotal)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderStatusName)
+                </td>
+                <td>
+                    @* @Html.DisplayFor(modelItem => item.CarPartId) *@
+                    @Html.ActionLink(item.CarPartId.ToString(), "Details", "CarPart", new { id = item.CarPartId }, null)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QuantityOrdered)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PriceTotal)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
