--- a/Views/ServiceTicket/Details.cshtml
+++ b/Views/ServiceTicket/Details.cshtml
@@ -10,40 +10,51 @@
     <h4>ServiceTicket</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CarId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CarId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.CarId) *@
+            @Html.ActionLink(@Model.CarId.ToString(), "Details", "Car", new { id = Model.CarId }, null)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MechanicId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MechanicId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.MechanicId) *@
+            @Html.ActionLink(@Model.MechanicId.ToString(), "Details", "Mechanic", new { id = Model.MechanicId }, null)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ServiceStatusId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServiceStatusId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.ServiceStatusId) *@
+            @Html.ActionLink(@Model.ServiceStatusId.ToString(), "Details", "ServiceStatus", new
+                {
+                    id =
+                     Model.ServiceStatusId
+                }, null)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ServiceTypeId)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServiceTypeId)
+        <dd class="col-sm-10">
+            @* @Html.DisplayFor(model => model.ServiceTypeId) *@
+            @Html.ActionLink(@Model.ServiceTypeId.ToString(), "Details", "ServiceType", new
+                {
+                    id = Model.ServiceTypeId
+                }, null)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PriceTotal)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PriceTotal)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CaseDescription)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CaseDescription)
         </dd>
     </dl>
