--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
+                @* <a class="navbar-brand" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Car" asp-action="Index">Cars</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ClientCar" asp-action="Index">Client's cars</a>
 
@@ -22,18 +22,18 @@
 
                 <a class="navbar-brand" asp-area="" asp-controller="CarPart" asp-action="Index">Car parts</a>
                 <a class="navbar-brand" asp-area="" asp-controller="OrderStatus" asp-action="Index">Car parts order
-                    statuses</a>
+                statuses</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ServiceType" asp-action="Index">Service types</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ServiceStatus" asp-action="Index">Service
-                    statuses</a>
+                statuses</a>
 
                 <a class="navbar-brand" asp-area="" asp-controller="ServiceTicket" asp-action="Index">Service
-                    tickets</a>
+                tickets</a>
 
                 <a class="navbar-brand" asp-area="" asp-controller="RefueledCar" asp-action="Index">Refueled cars</a>
                 <a class="navbar-brand" asp-area="" asp-controller="ChargedCar" asp-action="Index">Charged cars</a>
                 <a class="navbar-brand" asp-area="" asp-controller="CalculatedRepairCost" asp-action="Index">Calculated
-                    repair costs</a>
+                repair costs</a> *@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
