--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,32 +7,42 @@
 <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div> *@
 
-<div class="">
-    <div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <a class="navbar-brand" asp-area="" asp-controller="Client" asp-action="Index">Clients</a>
-        <a class="navbar-brand" asp-area="" asp-controller="Car" asp-action="Index">Cars</a>
-        <a class="navbar-brand" asp-area="" asp-controller="ClientCar" asp-action="Index">Client's cars</a>
-        <a class="navbar-brand" asp-area="" asp-controller="Mechanic" asp-action="Index">Mechanics</a>
-    </div>
 
-    <div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <a class="navbar-brand" asp-area="" asp-controller="CarPart" asp-action="Index">Car parts</a>
-        <a class="navbar-brand" asp-area="" asp-controller="OrderStatus" asp-action="Index">Car parts order
-            statuses</a>
-        <a class="navbar-brand" asp-area="" asp-controller="ServiceType" asp-action="Index">Service types</a>
-        <a class="navbar-brand" asp-area="" asp-controller="ServiceStatus" asp-action="Index">Service
-            statuses</a>
-    </div>
+<div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <a class="navbar-brand" asp-area="" asp-controller="Client" asp-action="Index"
+        style="margin-left: 40px;">Clients</a>
+    <a class="navbar-brand" asp-area="" asp-controller="Car" asp-action="Index" style="margin-left: 40px;">Cars</a>
+    <a class="navbar-brand" asp-area="" asp-controller="ClientCar" asp-action="Index"
+        style="margin-left: 40px;">Client's cars</a>
+    <a class="navbar-brand" asp-area="" asp-controller="Mechanic" asp-action="Index"
+        style="margin-left: 40px;">Mechanics</a>
+</div>
 
-    <div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <a class="navbar-brand" asp-area="" asp-controller="ServiceTicket" asp-action="Index">Service
-            tickets</a>
-    </div>
+<div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <a class="navbar-brand" asp-area="" asp-controller="CarPart" asp-action="Index" style="margin-left: 40px;">Car
+        parts</a>
+    <a class="navbar-brand" asp-area="" asp-controller="OrderStatus" asp-action="Index" style="margin-left: 40px;">Car
+        parts order
+        statuses</a>
+    <a class="navbar-brand" asp-area="" asp-controller="ServiceType" asp-action="Index"
+        style="margin-left: 40px;">Service types</a>
+    <a class="navbar-brand" asp-area="" asp-controller="ServiceStatus" asp-action="Index"
+        style="margin-left: 40px;">Service
+        statuses</a>
+</div>
 
-    <div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <a class="navbar-brand" asp-area="" asp-controller="RefueledCar" asp-action="Index">Refueled cars</a>
-        <a class="navbar-brand" asp-area="" asp-controller="ChargedCar" asp-action="Index">Charged cars</a>
-        <a class="navbar-brand" asp-area="" asp-controller="CalculatedRepairCost" asp-action="Index">Calculated
-            repair costs</a>
-    </div>
+<div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <a class="navbar-brand" asp-area="" asp-controller="ServiceTicket" asp-action="Index"
+        style="margin-left: 40px;">Service
+        tickets</a>
+</div>
+
+<div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <a class="navbar-brand" asp-area="" asp-controller="RefueledCar" asp-action="Index"
+        style="margin-left: 40px;">Refueled cars</a>
+    <a class="navbar-brand" asp-area="" asp-controller="ChargedCar" asp-action="Index"
+        style="margin-left: 40px;">Charged cars</a>
+    <a class="navbar-brand" asp-area="" asp-controller="CalculatedRepairCost" asp-action="Index"
+        style="margin-left: 40px;">Calculated
+        repair costs</a>
 </div>
