--- a/Views/ChargedCar/Create.cshtml
+++ b/Views/ChargedCar/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Charge car</h1>
 
-<h4>ChargedCar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
