--- a/Views/ClientCar/Create.cshtml
+++ b/Views/ClientCar/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Client's car</h1>
 
-<h4>ClientCar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,5 +33,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
