--- a/Views/OrderStatus/Create.cshtml
+++ b/Views/OrderStatus/Create.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Order status</h1>
 
-<h4>OrderStatus</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
