--- a/Views/RefueledCar/Create.cshtml
+++ b/Views/RefueledCar/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Refuel car</h1>
 
-<h4>RefueledCar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
