--- a/Views/ServiceType/Create.cshtml
+++ b/Views/ServiceType/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Service type</h1>
 
-<h4>ServiceType</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,5 +28,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
