fixed ui commit

--- a/Views/CarPart/Edit.cshtml
+++ b/Views/CarPart/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit car part</h1>
 
-<h4>CarPart</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -50,5 +49,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
