--- a/Views/CalculatedRepairCost/Edit.cshtml
+++ b/Views/CalculatedRepairCost/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit repair cost calculation</h1>
 
-<h4>CalculatedRepairCost</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,11 +32,11 @@
                 <input asp-for="HoursDedicated" class="form-control" />
                 <span asp-validation-for="HoursDedicated" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PriceTotal" class="control-label"></label>
-                <input asp-for="PriceTotal" class="form-control" />
-                <span asp-validation-for="PriceTotal" class="text-danger"></span>
-            </div>
+            @* <div class="form-group">
+            <label asp-for="PriceTotal" class="control-label"></label>
+            <input asp-for="PriceTotal" class="form-control" />
+            <span asp-validation-for="PriceTotal" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
