--- a/Views/ChargedCar/Edit.cshtml
+++ b/Views/ChargedCar/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit charged car</h1>
 
-<h4>ChargedCar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,11 +27,11 @@
                 <input asp-for="dateTime" class="form-control" />
                 <span asp-validation-for="dateTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PriceTotal" class="control-label"></label>
-                <input asp-for="PriceTotal" class="form-control" />
-                <span asp-validation-for="PriceTotal" class="text-danger"></span>
-            </div>
+            @* <div class="form-group">
+            <label asp-for="PriceTotal" class="control-label"></label>
+            <input asp-for="PriceTotal" class="form-control" />
+            <span asp-validation-for="PriceTotal" class="text-danger"></span>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -45,5 +44,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
