--- a/Views/ClientCar/Edit.cshtml
+++ b/Views/ClientCar/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit client's car</h1>
 
-<h4>ClientCar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,5 +34,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
