--- a/Views/RefueledCar/Edit.cshtml
+++ b/Views/RefueledCar/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit refueled car</h1>
 
-<h4>RefueledCar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,5 +44,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
