--- a/Views/CalculatedRepairCost/Details.cshtml
+++ b/Views/CalculatedRepairCost/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>CalculatedRepairCost</h4>
+    <h4>Calculated repair cost</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
