--- a/Views/CarPart/Details.cshtml
+++ b/Views/CarPart/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>CarPart</h4>
+    <h4>Car part</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
