--- a/Views/ServiceTicket/Details.cshtml
+++ b/Views/ServiceTicket/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ServiceTicket</h4>
+    <h4>Service ticket</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
