--- a/Views/ServiceType/Details.cshtml
+++ b/Views/ServiceType/Details.cshtml
@@ -7,13 +7,13 @@
 <h1>Details</h1>
 
 <div>
-    <h4>ServiceType</h4>
+    <h4>Service type</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ServiceName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ServiceName)
         </dd>
     </dl>
